fixed mood alignment with text bubble

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -76,6 +76,10 @@ p {
   }
 }
 
+.mood {
+  font-size:40px;
+}
+
 #btnStart, #btnStop{
 	border-radius: 50px;
 	height: 50px;
